# Practicas-fsiv

./: .gitignore  README.md
fsiv_tutorial_opencv/: CHANGELOG.TXT  common_code.cpp  test_common_code.cpp
practica1/cbg_process/: CHANGELOG.TXT  LEEME.txt  cbg_process.cpp  common_code.cpp  test_common_code.cpp
practica1/chroma_key/: CHANGELOG.TXT  CMakeLists.txt  LEEME.txt  chroma_key.cpp  common_code.cpp  common_code.hpp  test_common_code.cpp
practica2/color_balance/: CHANGELOG.TXT  LEEME.txt  color_balance.cpp  common_code.cpp
practica2/img_equalization/: CHANGELOG.TXT  CMakeLists.txt  LEEME.txt  README.md  common_code.cpp  img_equalization.cpp  test_common_code.cpp
practica3/sharpening/: CHANGELOG.TXT  CMakeLists.txt  LEEME.TXT  common_code.cpp  common_code.hpp  sharpen.cpp
practica3/usm_enhance/: CHANGELOG.TXT  LEEME.TXT  common_code.cpp  usm_enhance.cpp
practica4/aug_real/: CHANGELOG.TXT  CMakeLists.txt  LEEME.TXT  aug_real.cpp  common_code.cpp  common_code.hpp  test_common_code.cpp
practica4/calibrate/: LEEME.TXT  calibrate.cpp  common_code.cpp  undistort.cpp
practica5/blur_background/: CHANGELOG.TXT  CMakeLists.txt  LEEME.TXT  README.md  blur_background.cpp  common_code.cpp  common_code.hpp  test_common_code.cpp
practica5/edge_detector/: LEEME.TXT  common_code.cpp  edge_detector.cpp
practica6/fashion_mnist/: CMakeLists.txt  LEEME.TXT  README.md  classifiers.cpp  classifiers.hpp  common_code.hpp  dataset.cpp  dataset.hpp  features.cpp  features.hpp  gray_levels_features.cpp  gray_levels_features.hpp  metrics.cpp  metrics.hpp  mnist_reader.hpp  show_fashion_mnist.cpp  test_clf.cpp  test_common_code.cpp  train_clf.cpp
